--- a/schedule/qam/QR/15-SP3/zfcp.yaml
+++ b/schedule/qam/QR/15-SP3/zfcp.yaml
@@ -29,6 +29,7 @@ schedule:
   - installation/handle_reboot
   - installation/first_boot
   - console/validate_zfcp
+  - console/validate_multipath
 test_data:
   software:
     packages:
