--- a/schedule/yast/zfcp.yaml
+++ b/schedule/yast/zfcp.yaml
@@ -1,5 +1,5 @@
-name:           zfcp
-description:    >
+name: zfcp
+description: >
   Test installation on machine with zfcp multipath disk.
   Only tests succesful detection of multipath and installation.
   No functional testing of multipath itself.
@@ -12,7 +12,11 @@ schedule:
   - installation/access_beta_distribution
   - installation/product_selection/install_SLES
   - installation/licensing/accept_license
-  - installation/disk_activation
+  - installation/disk_activation/select_configure_zfcp_disks
+  - installation/disk_activation/select_add_zfcp_device
+  - installation/disk_activation/configure_zfcp_device
+  - installation/disk_activation/accept_configured_zfcp_devices
+  - installation/disk_activation/finish_disk_activation
   - installation/activate_multipath
   - installation/registration/register_via_scc
   - installation/module_selection/select_module_desktop
@@ -47,44 +51,44 @@ test_data:
         installed: 1
   zfcp:
     fcp_devices:
-      - fcp_channel: '0.0.fa00'
+      - fcp_channel: "0.0.fa00"
         attributes:
           online: 1
-          port_type: 'NPIV VPORT'
+          port_type: "NPIV VPORT"
         fcp_luns:
-          - wwpn: '0x500507630708d3b3'
+          - wwpn: "0x500507630708d3b3"
             scsi:
               peripheral_type: disk
-              vendor_model_revision: 'IBM'
-          - wwpn: '0x500507630703d3b3'
+              vendor_model_revision: "IBM"
+          - wwpn: "0x500507630703d3b3"
             scsi:
               peripheral_type: disk
-              vendor_model_revision: 'IBM'
-      - fcp_channel: '0.0.fc00'
+              vendor_model_revision: "IBM"
+      - fcp_channel: "0.0.fc00"
         attributes:
           online: 0
   multipath:
     attributes:
-      user_friendly_names: 'no'
+      user_friendly_names: "no"
       failback: manual
       path_checker: tur
       path_grouping_policy: failover
-      path_selector: 'service-time 0'
+      path_selector: "service-time 0"
       polling_interval: 5
       rr_min_io_rq: 1
       rr_weight: uniform
       uid_attribute: ID_SERIAL
     topology:
       vendor_product_revision: IBM
-      features: '1 queue_if_no_path'
-      hwhandler: '1 alua'
+      features: "1 queue_if_no_path"
+      hwhandler: "1 alua"
       wp: rw
       priority_groups:
         - prio: 50
           status: active
           paths:
             - name: sda
-              status: 'active ready running'
+              status: "active ready running"
             - name: sdb
-              status: 'active ready running'
-  multipath_activation_message: 'The system seems to have multipath hardware'
+              status: "active ready running"
+  multipath_activation_message: "The system seems to have multipath hardware"
