--- a/schedule/yast/yast2_gui/yast2_gui_sle.yaml
+++ b/schedule/yast/yast2_gui/yast2_gui_sle.yaml
@@ -14,6 +14,7 @@ vars:
 schedule:
   - installation/bootloader_start
   - boot/boot_to_desktop
+  - console/prepare_test_data
   - console/consoletest_setup
   - console/hostname
   - "{{yast2_modules}}"
