--- a/schedule/functional/autoyast_create_hdd/autoyast_create_hdd_gnome.yaml
+++ b/schedule/functional/autoyast_create_hdd/autoyast_create_hdd_gnome.yaml
@@ -1,8 +1,8 @@
 name: autoyast_create_hdd_gnome
 description:    >
-  Here description
+  Placeholder
 vars:
-  AUTOYAST: autoyast_sle15/create_hdd/create_hdd_gnome_aarch64.xml
+  AUTOYAST: autoyast_sle15/create_hdd/create_hdd_gnome_%ARCH%.xml
   DESKTOP: gnome
 schedule:
   - autoyast/prepare_profile
